Add enroll endpoint
